--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -2,4 +2,13 @@
 layout: layout.liquid
 ---
 <div class="title">Blog</div>
-
+{%- for blog in collections.blog reversed -%}
+    <div class="blog-index-item">
+        <div class="blog-index-title">
+            <a href={{ blog.url }}>{{ blog.data.title }}</a>
+        </div>
+        <div><em>{{ blog.data.date }}</em></div>
+        {% if blog.data.description %}
+        <div>{{ blog.data.description }}</div>
+        {% endif %}
+    </div>{%- endfor -%}
