--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Jason Telfer - web developer</title>
     <link rel="stylesheet" href="{{ "/css/styles.css" }}" />
+    <link rel="stylesheet" href="{{ "/css/prism.css" }}" />
 </head>
 <body>
 <div class="layout">
