--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
   padding: 0.25rem 1rem 0.25rem 1rem;
   margin: auto;
   width: min(64rem, 100%);
+  box-sizing: border-box;
 }
 
 .content {
