--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
+  <head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason Telfer - web developer</title>
-    <link rel="stylesheet" href="{{ "/css/styles.css" }}" />
-    <link rel="stylesheet" href="{{ "/css/prism.css" }}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css" />
-</head>
-<body>
-<div class="layout">
-    <div>
-        {% include "navbar.liquid" %}
+    <link rel="stylesheet" href="{{ "/css/styles.css" }}">
+    <link rel="stylesheet" href="{{ "/css/prism.css" }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css">
+  </head>
+  <body>
+    <div class="layout">
+      <div>
+        {% include 'navbar.liquid' %}
         <div class="content">{{ content }}</div>
+      </div>
+      <div class="footer">
+        {% include 'contact.liquid' %}
+      </div>
     </div>
-    <div class="footer">
-        {% include "contact.liquid" %}
-    </div>
-</div>
-</body>
+  </body>
 </html>
