--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -3,12 +3,15 @@ layout: layout.liquid
 ---
 <div class="title">Blog</div>
 {%- for blog in collections.blog reversed -%}
-    <div class="blog-index-item">
-        <div class="blog-index-title">
-            <a href={{ blog.url }}>{{ blog.data.title }}</a>
-        </div>
-        <div><em>{{ blog.data.date }}</em></div>
-        {% if blog.data.description %}
-            <div>{{ blog.data.description }}</div>
-        {% endif %}
-    </div>{%- endfor -%}
+  <div class="blog-index-item">
+    <div class="blog-index-title">
+      <a href="" {{ blog.url }}>{{ blog.data.title }}</a>
+    </div>
+    <div>
+      <em>{{ blog.data.date }}</em>
+    </div>
+    {% if blog.data.description %}
+      <div>{{ blog.data.description }}</div>
+    {% endif %}
+  </div>
+{%- endfor -%}
