--- a/index.liquid
+++ b/index.liquid
@@ -10,38 +10,35 @@ layout: layout.liquid
   <h2>What can I bring to your team?</h2>
   <div class="skills">
     <div class="skill">
-      <div class="skill-title">Web development</div>
-      <div class="skill-blurb">
-        Having learnt to build web applications with Java and JavaScript, I've developed solid problem solving skills
-        and gained exposure to the inner workings of software and the web.
-      </div>
-    </div>
-    <div class="skill">
-      <div class="skill-title">Cloud deployment</div>
-      <div class="skill-blurb">
-        While I am most familiar with Amazon Web Service, I have recently started a course in Microsoft Azure and
-        working towards earning certification.
-      </div>
-    </div>
-    <div class="skill">
-      <div class="skill-title">Linux</div>
+      <div class="skill-title">Java</div>
       <div class="skill-blurb">
         With years of Linux experience, I am comfortable installing and configuring web servers as well as working with
         in containerised testing and development environments.
       </div>
     </div>
     <div class="skill">
-      <div class="skill-title">Self-taught</div>
+      <div class="skill-title">HTML/CSS</div>
       <div class="skill-blurb">
-        My learning has largely been self-directed, with a focus on building things and RTFM. I'm endlessly curious
-        about technology and how things work and expect to keep on growing my skills.
       </div>
     </div>
     <div class="skill">
-      <div class="skill-title">Ready to collaborate</div>
+      <div class="skill-title">JavaScript/TypeScript</div>
       <div class="skill-blurb">
-        Being familiar with git, Github and maintaining an open-source project, I am comfortable understanding feedback
-        from users and using the issue based approach to problem tracking.
+      </div>
+    </div>
+    <div class="skill">
+      <div class="skill-title">React</div>
+      <div class="skill-blurb">
+      </div>
+    </div>
+    <div class="skill">
+      <div class="skill-title">Linux</div>
+      <div class="skill-blurb">
+      </div>
+    </div>
+    <div class="skill">
+      <div class="skill-title">Cloud deployment</div>
+      <div class="skill-blurb">
       </div>
     </div>
   </div>
