--- a/index.liquid
+++ b/index.liquid
@@ -4,7 +4,7 @@ layout: layout.liquid
 <div>
   <div class="title">Hi, I'm Jason</div>
   <div class="blurb">
-    I have been exploring fundamental tools and techniques of web development and am ready to transition into the
+    After exploring the fundamental tools and techniques of web development, I am excited to be ready to join the
     industry.
   </div>
   <h2>What can I bring to your team?</h2>
@@ -12,33 +12,52 @@ layout: layout.liquid
     <div class="skill">
       <div class="skill-title">Java</div>
       <div class="skill-blurb">
-        With years of Linux experience, I am comfortable installing and configuring web servers as well as working with
-        in containerised testing and development environments.
+        <span>
+          I enjoy writing server-side code with Java. In particular, I enjoy using the Spring Boot framework in for it's
+          excellent persistence and testing stories. I have used Java to write an
+          <a href="https://github.com/jasontdev/fastmate-mvc">MVC app</a> as well as build an
+          <a href="https://github.com/jasontdev/taskmesh-api">API</a>.
+        </span>
       </div>
     </div>
     <div class="skill">
       <div class="skill-title">HTML/CSS</div>
       <div class="skill-blurb">
+        <span>
+          I am comfortable building layouts with HTML and CSS both inside and outside of JavaScript frameworks. The site
+          you're now viewing is written in HTML and CSS templates and then built with
+          <a href="https://www.11ty.dev">11ty</a>.
+        </span>
       </div>
     </div>
     <div class="skill">
       <div class="skill-title">JavaScript/TypeScript</div>
       <div class="skill-blurb">
+        After learning JavaScript for front-end code, I fell in love with the expressive, functional style of
+        programming. Transitioning to TypeScript provided a further boost in productivity and I have enjoyed exploring
+        the Node ecosystem for server-side code with tools like Prisma, Express and GraphQL.
       </div>
     </div>
     <div class="skill">
       <div class="skill-title">React</div>
-      <div class="skill-blurb">
-      </div>
+      <div class="skill-blurb"></div>
     </div>
     <div class="skill">
       <div class="skill-title">Linux</div>
       <div class="skill-blurb">
+        Being a long time Linux enthusiast, I am at home developing with docker and configuring virtual private servers
+        to host applications and databases.
       </div>
     </div>
     <div class="skill">
       <div class="skill-title">Cloud deployment</div>
       <div class="skill-blurb">
+        <span>
+          I have experience working with AWS and Azure as well as some of the smaller providers like Vulry, Linode and
+          Digital Ocean. This website is deployed on Azure but was
+          <a href="https://jasont.dev/blog/migrating-to-aws-pt1/">originally</a> hosted on a Vultr VPS before
+          <a href="https://jasont.dev/blog/migrating-to-aws-pt2/">moving</a> to AWS S3 and CloudFront.
+        </span>
       </div>
     </div>
   </div>
