Fixed text in index.liquid

--- a/_includes/navbar.liquid
+++ b/_includes/navbar.liquid
@@ -2,5 +2,6 @@
   <div class="navbar-items">
     <a href="/">ABOUT</a>
     <a href="/blog">BLOG</a>
+    <a href="/portfolio">PORTFOLIO</a>
   </div>
 </div>
