--- a/index.liquid
+++ b/index.liquid
@@ -31,7 +31,7 @@ layout: layout.liquid
       </div>
     </div>
     <div class="skill">
-      <div class="skill-title">JavaScript/TypeScript</div>
+      <div class="skill-title">TypeScript</div>
       <div class="skill-blurb">
         After learning JavaScript for front-end code, I fell in love with the expressive, functional style of
         programming. Transitioning to TypeScript provided a further boost in productivity and I have enjoyed exploring
@@ -40,7 +40,10 @@ layout: layout.liquid
     </div>
     <div class="skill">
       <div class="skill-title">React</div>
-      <div class="skill-blurb"></div>
+      <div class="skill-blurb">
+        I am a passionate student of the React ecosystem. I've explored various frameworks but my focus has been on
+        building SPAs. I have experience with many tools libraries include Chakra UI, React Router and React Query.
+      </div>
     </div>
     <div class="skill">
       <div class="skill-title">Linux</div>
